-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: repo-valhalla
-
Component/s: hotspot
# Internal Error (/scratch/mesos/slaves/fcf4c0c4-d73e-4321-860c-6613427db92b-S2620/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/abc6b1b2-37c5-4bad-91fd-f2943d7a6254/runs/67297905-23af-4834-9f11-904cf7ee9e61/workspace/open/src/hotspot/share/runtime/jniHandles.cpp:89), pid=21035, tid=6403
# assert(oopDesc::is_oop(obj)) failed: not an oop
Stack: [0x0000000100e90000,0x0000000100f90000], sp=0x0000000100f8e8e0, free space=1018k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.dylib+0xc962e9] VMError::report_and_die(int, char const*, char const*, __va_list_tag*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned long)+0x6e5
V [libjvm.dylib+0xc96a05] VMError::report_and_die(Thread*, void*, char const*, int, char const*, char const*, __va_list_tag*)+0x47
V [libjvm.dylib+0x44420c] report_vm_error(char const*, int, char const*, char const*, ...)+0x145
V [libjvm.dylib+0x735382] JNIHandles::make_local(JNIEnv_*, oop)+0xa2
V [libjvm.dylib+0x760d9d] JVM_InvokeMethod+0x52f
j jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Ljava/lang/reflect/Method;Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+0 java.base@14-lworldea
j jdk.internal.reflect.NativeMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+100 java.base@14-lworldea
j jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+6 java.base@14-lworldea
j java.lang.reflect.Method.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+59 java.base@14-lworldea
j compiler.valhalla.valuetypes.TestCallingConvention.test31_verifier(Z)V+17
v ~StubRoutines::call_stub
V [libjvm.dylib+0x65516f] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, Thread*)+0x45b
V [libjvm.dylib+0xafb9c8] invoke(InstanceKlass*, methodHandle const&, Handle, bool, objArrayHandle, BasicType, objArrayHandle, bool, Thread*)+0xce9
V [libjvm.dylib+0xafab2f] Reflection::invoke_method(oop, Handle, objArrayHandle, Thread*)+0x3d7
V [libjvm.dylib+0x760c6c] JVM_InvokeMethod+0x3fe
j jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Ljava/lang/reflect/Method;Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+0 java.base@14-lworldea
j jdk.internal.reflect.NativeMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+100 java.base@14-lworldea
j jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+6 java.base@14-lworldea
j java.lang.reflect.Method.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+59 java.base@14-lworldea
j compiler.valhalla.valuetypes.ValueTypeTest.run([Ljava/lang/Class;)V+318
j compiler.valhalla.valuetypes.ValueTypeTest.run([Ljava/lang/String;[Ljava/lang/Class;)V+42
j compiler.valhalla.valuetypes.TestCallingConvention.main([Ljava/lang/String;)V+63
v ~StubRoutines::call_stub
V [libjvm.dylib+0x65516f] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, Thread*)+0x45b
V [libjvm.dylib+0x6dbc14] jni_invoke_static(JNIEnv_*, JavaValue*, _jobject*, JNICallType, _jmethodID*, JNI_ArgumentPusher*, Thread*)+0x157
V [libjvm.dylib+0x6e20d8] jni_CallStaticVoidMethod+0x20e
C [libjli.dylib+0x48ad] JavaMain+0xab4
C [libjli.dylib+0x6bab] ThreadJavaMain+0x9
C [libsystem_pthread.dylib+0x3661] _pthread_body+0x154
C [libsystem_pthread.dylib+0x350d] _pthread_body+0x0
C [libsystem_pthread.dylib+0x2bf9] thread_start+0xd
# assert(oopDesc::is_oop(obj)) failed: not an oop
Stack: [0x0000000100e90000,0x0000000100f90000], sp=0x0000000100f8e8e0, free space=1018k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.dylib+0xc962e9] VMError::report_and_die(int, char const*, char const*, __va_list_tag*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned long)+0x6e5
V [libjvm.dylib+0xc96a05] VMError::report_and_die(Thread*, void*, char const*, int, char const*, char const*, __va_list_tag*)+0x47
V [libjvm.dylib+0x44420c] report_vm_error(char const*, int, char const*, char const*, ...)+0x145
V [libjvm.dylib+0x735382] JNIHandles::make_local(JNIEnv_*, oop)+0xa2
V [libjvm.dylib+0x760d9d] JVM_InvokeMethod+0x52f
j jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Ljava/lang/reflect/Method;Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+0 java.base@14-lworldea
j jdk.internal.reflect.NativeMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+100 java.base@14-lworldea
j jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+6 java.base@14-lworldea
j java.lang.reflect.Method.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+59 java.base@14-lworldea
j compiler.valhalla.valuetypes.TestCallingConvention.test31_verifier(Z)V+17
v ~StubRoutines::call_stub
V [libjvm.dylib+0x65516f] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, Thread*)+0x45b
V [libjvm.dylib+0xafb9c8] invoke(InstanceKlass*, methodHandle const&, Handle, bool, objArrayHandle, BasicType, objArrayHandle, bool, Thread*)+0xce9
V [libjvm.dylib+0xafab2f] Reflection::invoke_method(oop, Handle, objArrayHandle, Thread*)+0x3d7
V [libjvm.dylib+0x760c6c] JVM_InvokeMethod+0x3fe
j jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Ljava/lang/reflect/Method;Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+0 java.base@14-lworldea
j jdk.internal.reflect.NativeMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+100 java.base@14-lworldea
j jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+6 java.base@14-lworldea
j java.lang.reflect.Method.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+59 java.base@14-lworldea
j compiler.valhalla.valuetypes.ValueTypeTest.run([Ljava/lang/Class;)V+318
j compiler.valhalla.valuetypes.ValueTypeTest.run([Ljava/lang/String;[Ljava/lang/Class;)V+42
j compiler.valhalla.valuetypes.TestCallingConvention.main([Ljava/lang/String;)V+63
v ~StubRoutines::call_stub
V [libjvm.dylib+0x65516f] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, Thread*)+0x45b
V [libjvm.dylib+0x6dbc14] jni_invoke_static(JNIEnv_*, JavaValue*, _jobject*, JNICallType, _jmethodID*, JNI_ArgumentPusher*, Thread*)+0x157
V [libjvm.dylib+0x6e20d8] jni_CallStaticVoidMethod+0x20e
C [libjli.dylib+0x48ad] JavaMain+0xab4
C [libjli.dylib+0x6bab] ThreadJavaMain+0x9
C [libsystem_pthread.dylib+0x3661] _pthread_body+0x154
C [libsystem_pthread.dylib+0x350d] _pthread_body+0x0
C [libsystem_pthread.dylib+0x2bf9] thread_start+0xd
- relates to
-
JDK-8224211 [lworld] Reflective method invocation fails with assert(sender_sp != sp()) failed: must have changed
-
- Resolved
-
-
JDK-8233297 [lworld] runtime/NMT/ShutdownTwice.java fails with assert(*_lock >= 0) failed: Can not content exclusive lock
-
- Resolved
-