8232108: [lworld] Reflective method invocation with scalarized return is not GC safe

Reviewed-by: roland